testdata/e2e/examples/modifiers/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: modifiers
spec:
  steps:
  - try:
    - apply:
        resource:
          apiVersion: v1
          kind: Namespace
          metadata:
            name: foo
        modifiers:
        - label:
            foo: bar
        - annotate:
            foo: bar
        - merge:
            metadata:
              labels:
                lorem: ipsum
              annotations:
                lorem: ipsum
